# awdshells

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build-static.bat  build-static.sh  build.bat  build.sh
inc/: batch.hpp  cli.hpp  externs.hpp  logger.hpp  server.hpp  session.hpp  utils.hpp  version.hpp
src/: awdshells.cpp  batch.cpp  cli.cpp  logger.cpp  server.cpp  session.cpp  utils.cpp
